--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -101,19 +101,11 @@
 }
 
 .dropdownContentLeft {
-  margin-top: 110px;
+  margin-top: 100px;
   width: 100%;
   display: none;
   justify-content: center;
-  margin-left: 43.3%;
-}
-
-.dropdownContentWanita{
-  margin-left: 30%;
-}
-
-.dropdownContentAnak{
-  margin-left: 16.7%;
+  right: 0;
 }
 
 .linkLeft{
