--- a/src/css/Daftar.module.css
+++ b/src/css/Daftar.module.css
@@ -1,6 +1,7 @@
 .body {
   font-family: "Roboto";
   height: 910px;
+  margin-top: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
