--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -2,7 +2,7 @@
   font-family: "Roboto";
   display: flex;
   justify-content: center;
-  margin: 50px auto;
+  margin: 110px auto 50px;
   width: 70%;
 }
 
@@ -12,37 +12,45 @@
 }
 
 .promo {
-   display: block;
+  display: block;
   width: 74%;
 }
 
-.headerContent{
-   width: 100%;
-   display: flex;
-   justify-content: center;
+.headerContent {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 28px;
+  font-size: 19px;
+  font-weight: 500;
+  letter-spacing: 0.8px;
 }
 
-.content{
-   display: flex;
-   justify-content: center;
+.content {
+  display: flex;
+  justify-content: center;
+  height: 430px;
 }
 
-.panah{
-   margin: 0px;
-   width: 2.5%;
+.panah {
+  width: 2.5%;
+  display: flex;
+  align-items: center;
 }
 
-.panahIcon{
-   width: 100%;
-   height: 40px;
+.panahIcon {
+  width: 100%;
+  height: 40px;
+  margin-top: -100px;
 }
 
-.produk{
-   display: flex;
-   width: 95%;
+.panahIcon:hover {
+  cursor: pointer;
+  filter: invert(16%) sepia(15%) saturate(2424%) hue-rotate(314deg)
+    brightness(93%) contrast(85%);
 }
 
-.produkCard{
-   width: 25%;
-   margin: 0px 1%;
+.produk {
+  display: flex;
+  width: 95%;
 }
