--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -1,8 +1,10 @@
 .nav {
-  position: sticky;
+  position: fixed;
   background-color: #e9ecef;
   display: flex;
   height: 55px;
+  width: 100%;
+  top: 0;
   /* Y Center */
   align-items: center;
   /* X Center */
