--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -20,7 +20,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 28px;
+  margin-bottom: 40px;
   font-size: 19px;
   font-weight: 500;
   letter-spacing: 0.8px;
@@ -29,28 +29,11 @@
 .content {
   display: flex;
   justify-content: center;
-  height: 430px;
-}
-
-.panah {
-  width: 2.5%;
-  display: flex;
-  align-items: center;
-}
-
-.panahIcon {
-  width: 100%;
-  height: 40px;
-  margin-top: -100px;
-}
-
-.panahIcon:hover {
-  cursor: pointer;
-  filter: invert(16%) sepia(15%) saturate(2424%) hue-rotate(314deg)
-    brightness(93%) contrast(85%);
 }
 
 .produk {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 95%;
 }
