--- a/src/css/Transaksi.module.css
+++ b/src/css/Transaksi.module.css
@@ -16,11 +16,12 @@
 
 .rowJudul{
   display: flex;
+  justify-content: center;
   margin-bottom: 35px;
 }
 
 .colJudul{
-  width: 20%;
+  width: 25%;
   display: flex;
   justify-content: center;
 }
@@ -29,7 +30,7 @@
   border-radius: 12px;
   box-shadow: 0px 3px 6px rgb(0, 0, 0, 16%);
   border: none;
-  width: 83%;
+  width: 72%;
   height: 35px;
   background-color: white;
 }
